fix: inserita logica per cambiare pw o eliminare il profilo
