# tyb_backend/src/main/java/com/tyb/tyb_backend/dto/DeleteUserDto.java
@@ -1,0 +1,17 @@
+package com.tyb.tyb_backend.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+public class DeleteUserDto {
+
+    private String username;
+    private String password;
+
+}
